--- a/Resources/translations/messages.en.yml
+++ b/Resources/translations/messages.en.yml
@@ -35,3 +35,8 @@ oro:
             event.label:          Event name
             template.label:       Template
             recipient_list.label: Recipient list
+
+        system_configuration:
+            email_notification_sender_email: Sender Email
+            email_notification_sender_name: Sender Name
+            title: Notification Configuration
