--- a/Resources/translations/messages.en.yml
+++ b/Resources/translations/messages.en.yml
@@ -35,6 +35,8 @@ oro:
             event.label:          Event name
             template.label:       Template
             recipient_list.label: Recipient list
+            email.label:          Email
+            owner.label:          Owner
 
         system_configuration:
             email_notification_sender_email: Sender Email
