--- a/Resources/translations/messages.en.yml
+++ b/Resources/translations/messages.en.yml
@@ -13,7 +13,9 @@ oro:
             entity_post_remove:  Entity remove
 
         form:
-            choose_event: Choose an event...
+            choose_event:     'Choose an event...'
+            choose_entity:    'Choose an entity...'
+            choose_template:  'Choose a template...'
 
         datagrid:
             action:
