--- a/Resources/translations/messages.en.yml
+++ b/Resources/translations/messages.en.yml
@@ -13,8 +13,7 @@ oro:
             entity_post_remove:  Entity remove
 
         form:
-            choose_event:     'Choose an event...'
-            choose_template:  'Choose a template...'
+            choose_event:        Choose an event...
 
         datagrid:
             action:
